--- a/Resources/NetHook2/NetHook2/NetHook2.vcxproj.filters
+++ b/Resources/NetHook2/NetHook2/NetHook2.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="version.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="os.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="binaryreader.h">
